@@ -1,3 +1,9 @@
+2007-10-12  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
+	  src/applet.h
+		- (nma_schedule_warning_dialog): don't need an 'applet' argument
+
 2007-10-12  Tambet Ingo  <tambet@gmail.com>
 
 	* src/applet.c: Don't hard code the property names of the libnm-glib classes,
